<?xml version="1.0"?>
<package format="2">
  <name>pa_tcs_bridge</name>
  <version>0.0.0</version>
  <description>A bridge between the ROS world and a Precise Automation controller running TCS. Provides a simple pass-through for string commands and replies.</description>

  <maintainer email="alex.reed@preciseautomation.com">Alex Reed</maintainer>

  <license>MIT</license>

  <author email="alex.reed@preciseautomation.com">Alex Reed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
